<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlaceIt</string>
    <string name="action_settings">Settings</string>

    <!-- Map Strings -->
    <string name="map_list_button">List</string>
    <string name="map_placeIt_button">Create Placeit</string>
    <string name="map_logout_button">Logout</string>

    <!-- Form Strings -->
    <string name="form_show_map">Show Map</string>
    <string name="form_title">Title</string>
    <string name="form_description">Description</string>
    <string name="form_title_editText">My Title</string>
    <string name="form_save_button">Save</string>
    <string name="form_cancel_button">Cancel</string>
    <string name="title_activity_notification_main">NotificationMainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btBasicNotification">Discard</string>
    <string name="tvHandleNotification">REPLACE ME!</string>
    <string name="title_handle_activity">NotificationMainActivity</string>
    <string name="form_spinner_title">Recurring</string>

    <!-- Login Strings -->
    <string name="login_title">Place-It!</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_button">Login</string>
    <string name="new_creation_button">Create Account</string>
    
    <!-- Account Strings -->
    <string name="creation_title">Account Creation</string>
    <string name="creation_button">Create</string>

    <!-- List Strings -->
    <string name="list_title">List of PlaceIts</string>
    <string name="list_button">Completed PlaceIts</string>
    <string name="pull_list_title">Completed PlaceIts</string>

    <string-array name="formValues">
        <item>None</item>
        <item>10 Seconds</item>
        <item>1 Minute</item>
        <item>1 Hour</item>
        <item>1 Day</item>
        <item>1 Week</item>
    </string-array>
    <string-array name="categoryValues">
        <item>Empty</item>
        <item>accounting</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>atm</item>
        <item>bakery</item>
        <item>bank</item>
        <item>bar</item>
        <item>beauty_salon</item>
        <item>bicycle_store</item>
        <item>book_store</item>
        <item>bowling_alley</item>
        <item>bus_station</item>
        <item>cafe</item>
        <item>campground</item>
        <item>car_dealer</item>
        <item>car_rental</item>
        <item>car_repair</item>
        <item>car_wash</item>
        <item>casino</item>
        <item>cemetery</item>
        <item>church</item>
        <item>city_hall</item>
        <item>clothing_store</item>
        <item>convenience_store</item>
        <item>courthouse</item>
        <item>dentist</item>
        <item>department_store</item>
        <item>doctor</item>
        <item>electrician</item>
        <item>electronics_store</item>
        <item>embassy</item>
        <item>establishment</item>
        <item>finance</item>
        <item>fire_station</item>
        <item>florist</item>
        <item>food</item>
        <item>funeral_home</item>
        <item>furniture_store</item>
        <item>gas_station</item>
        <item>general_contractor</item>
        <item>grocery_or_supermarket</item>
        <item>gym</item>
        <item>hair_care</item>
        <item>hardware_store</item>
        <item>health</item>
        <item>hindu_temple</item>
        <item>home_goods_store</item>
        <item>hospital</item>
        <item>insurance_agency</item>
        <item>jewelry_store</item>
        <item>laundry</item>
        <item>lawyer</item>
        <item>library</item>
        <item>liquor_store</item>
        <item>local_government_office</item>
        <item>locksmith</item>
        <item>lodging</item>
        <item>meal_delivery</item>
        <item>meal_takeaway</item>
        <item>mosque</item>
        <item>movie_rental</item>
        <item>movie_theater</item>
        <item>moving_company</item>
        <item>museum</item>
        <item>night_club</item>
        <item>painter</item>
        <item>park</item>
        <item>parking</item>
        <item>pet_store</item>
        <item>pharmacy</item>
        <item>physiotherapist</item>
        <item>place_of_worship</item>
        <item>plumber</item>
        <item>police</item>
        <item>post_office</item>
        <item>real_estate_agency</item>
        <item>restaurant</item>
        <item>roofing_contractor</item>
        <item>rv_park</item>
        <item>school</item>
        <item>shoe_store</item>
        <item>shopping_mall</item>
        <item>spa</item>
        <item>stadium</item>
        <item>storage</item>
        <item>store</item>
        <item>subway_station</item>
        <item>synagogue</item>
        <item>taxi_stand</item>
        <item>train_station</item>
        <item>travel_agency</item>
        <item>university</item>
        <item>veterinary_care</item>
        <item>zoo</item>
    </string-array>

    <color name="white">#ffffff</color>
    <color name="black">#000000</color>

</resources>