<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/form_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_title" />

    <EditText
        android:id="@+id/form_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_title_editText" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_description" />

    <EditText
        android:id="@+id/form_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.63"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/form_spinner_titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_spinner_title" />

    <Spinner
        android:id="@+id/from_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right" />

    <Spinner
        android:id="@+id/from_spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/from_spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/formCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/form_cancel_button" />

        <Button
            android:id="@+id/formSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/form_save_button" />
    </LinearLayout>

</LinearLayout>