<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/creation_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/login_username" />
	
	<!-- username -->
    <EditText
        android:id="@+id/creation_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:textColor="@color/white"
        android:text="@string/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- password -->
    <EditText
        android:id="@+id/creation_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPassword" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/creation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creation_button"/>

</LinearLayout>
